--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
     "version": "0.0.1",
     "description": "Real-time slides show",
     "dependencies": {
+        "axios": "^1.2.2",
+        "cheerio": "^1.0.0-rc.12",
         "express": "^4.18.2",
         "i": "^0.3.7",
         "lunarphase-js": "^1.0.10",
