--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
         "express": "^4.18.2",
         "i": "^0.3.7",
         "lunarphase-js": "^1.0.10",
+        "node-dht-sensor": "^0.4.3",
         "npm": "^9.2.0",
         "showdown": "^2.1.0"
     }
